--- a/course.yaml
+++ b/course.yaml
@@ -10,7 +10,7 @@ description: |
   Chinese title is 一张旧画儿
 
   *An Old Painting* is in the second level of Chinese Breeze which
-  contains approximatelAn Old Paintingy 500 words.
+  contains approximately 500 words.
 
   Description of the book: In the art dealer’s shop, the old gentleman
   picked up the old painting once again. He looked it up and down,
